# LittleRpg-DiscordBot

./: .gitignore  README.md  pyproject.toml
src/: .env.default  config_default.json  main.py  start_webserver.sh  utils.py  watchdog.py  webserver.py
src/cogs/: censor.py  invite_check.py  minecraft_integration.py  minimum_role.py  store.py
